Added category list and hints

--- a/hangman.html
+++ b/hangman.html
@@ -36,7 +36,7 @@
           <p>Score: <span id="score">0</span> | High Score: <span id="highScoreInGame">0</span></p>
           <p>Level: <span id="currentLevel">Easy</span></p>
         </div>
-        <img id="mainImage" src="../hangman/img/stickman.jpg" alt="Hangman Image" width="200">
+        <img id="mainImage" src="img/stickman.jpg" alt="Hangman Image" width="200">
         <h1>HANGMAN</h1>
         <p id="hint"><span></span></p>
         <h2 id="wordDisplay"></h2>
@@ -48,7 +48,7 @@
   </div>
 
   <div id="customAlert" role="alert">🎉 Congratulations! You scored the highest! 🎉</div>
-  <audio id="congratsSound" src="../hangman/sound/applause-sound.mp3" preload="auto"></audio>
+  <audio id="congratsSound" src="sound/applause-sound.mp3" preload="auto"></audio>
 
 <script src="hangman.js"></script>
 </body>
