--- a/hangman.html
+++ b/hangman.html
@@ -7,14 +7,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="hangnam.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <div id="wrapper">
     <div class="card">
       <div id="start-page">
         <h1>Hangman Game</h1>
-        <label>Enter Your Name: <input type="text" id="playerName" required></label><br><br>
+        <label>Name: <input type="text" id="playerName" placeholder="Enter Your Name" required></label><br><br>
         <label>Choose Level:
           <select id="difficulty">
             <option value="Easy">Easy</option>
