Added noWordsAlert and zero letter

--- a/hangman.html
+++ b/hangman.html
@@ -14,7 +14,7 @@
     <div class="card">
       <div id="start-page">
         <h1>Hangman Game</h1>
-        <label>Name: <input type="text" id="playerName" placeholder="Enter Your Name" required></label><br><br>
+        <label>Enter Your Name: <input type="text" id="playerName" required></label><br><br>
         <label>Choose Level:
           <select id="difficulty">
             <option value="Easy">Easy</option>
@@ -30,6 +30,7 @@
         <button onclick="startGame()">Start Game</button>
         <p class="highScore">High Score: <span id="highScore">0</span></p>
       </div>
+
       <div id="game-page" class="hidden">
         <div class="scoreboard">
           <p>Score: <span id="score">0</span> | High Score: <span id="highScoreInGame">0</span></p>
@@ -52,6 +53,12 @@
   <div id="gameOverAlert" class="custom-message" role="alert">
     <p>😢 Game Over! The word was: <span id="revealedWord"></span></p>
   </div>
-<script src="hangman.js"></script>
+  <div id="noWordsAlert" class="custom-message" role="alert">
+    <p>🏁 Game Over! No more words available.</p>
+  </div>
+
+<script src="hangman.js">
+  
+</script>
 </body>
 </html>
