--- a/hangman.html
+++ b/hangman.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hangman Game</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="icon" href="img/logo.png" type="image/png">
+
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style/style.css">
+  <title>Hangman Game</title>
 </head>
 <body>
+  <div id="snowfall"></div>
   <div id="wrapper">
     <div class="card">
       <div id="start-page">
