--- a/hangman.html
+++ b/hangman.html
@@ -31,6 +31,7 @@
           </select>
         </label><br><br>
         <button onclick="startGame()">Start Game</button>
+        <canvas id="stickmanCanvas" ></canvas>
         <p class="highScore">High Score: <span id="highScore">0</span></p>
       </div>
 
